Going in the right direction.

--- a/hero/sass/style.scss
+++ b/hero/sass/style.scss
@@ -254,7 +254,8 @@ body {
 	.activearea{
 		width: $photos-feature-content;
 		height: $hero-height;
-		z-index: 43;
+		z-index: 41;
+		float: left;
 	}
 	
 	article.photoset{
