--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -258,34 +258,35 @@ body {
 #photos .activearea {
   width: 652.58px;
   height: 370px;
-  z-index: 43;
+  z-index: 41;
+  float: left;
 }
-/* line 260, ../sass/style.scss */
+/* line 261, ../sass/style.scss */
 #photos article.photoset {
   display: none;
   height: 370px;
   width: 974px;
 }
-/* line 266, ../sass/style.scss */
+/* line 267, ../sass/style.scss */
 #photos article.photoset.opened {
   display: block;
 }
-/* line 270, ../sass/style.scss */
+/* line 271, ../sass/style.scss */
 #photos .photo {
   float: left;
 }
-/* line 272, ../sass/style.scss */
+/* line 273, ../sass/style.scss */
 #photos .photo figure {
   width: 652.58px;
   height: 370px;
   margin: 0px;
 }
-/* line 276, ../sass/style.scss */
+/* line 277, ../sass/style.scss */
 #photos .photo figure img {
   width: 100%;
   float: left;
 }
-/* line 281, ../sass/style.scss */
+/* line 282, ../sass/style.scss */
 #photos .photo figcaption {
   width: 305.42px;
   margin: 0px;
@@ -303,7 +304,7 @@ body {
   -o-box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
   box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
 }
-/* line 294, ../sass/style.scss */
+/* line 295, ../sass/style.scss */
 #photos .photo figcaption .notch {
   position: absolute;
   color: #fffdf7;
@@ -313,31 +314,31 @@ body {
   margin: 0px;
   padding: 0px;
 }
-/* line 304, ../sass/style.scss */
+/* line 305, ../sass/style.scss */
 #photos .photo figcaption p {
   margin: 0px;
 }
-/* line 308, ../sass/style.scss */
+/* line 309, ../sass/style.scss */
 #photos .photo figcaption .credit {
   font-size: 11px;
 }
-/* line 317, ../sass/style.scss */
+/* line 318, ../sass/style.scss */
 #photos .photo.opened {
   display: block;
 }
-/* line 321, ../sass/style.scss */
+/* line 322, ../sass/style.scss */
 #photos .content {
   z-index: 0;
   float: left;
 }
-/* line 326, ../sass/style.scss */
+/* line 327, ../sass/style.scss */
 #photos .controls {
   width: 652.58px;
   position: absolute;
   top: 0px;
   z-index: 42;
 }
-/* line 332, ../sass/style.scss */
+/* line 333, ../sass/style.scss */
 #photos .controls .prev, #photos .controls .next {
   height: 60px;
   width: 60px;
@@ -350,32 +351,32 @@ body {
   margin: 4px;
   border: solid 4px rgba(0, 0, 0, 0.6);
 }
-/* line 344, ../sass/style.scss */
+/* line 345, ../sass/style.scss */
 #photos .controls .prev p, #photos .controls .next p {
   position: relative;
   margin: 0px;
   margin-top: -8px;
   opacity: .6;
 }
-/* line 352, ../sass/style.scss */
+/* line 353, ../sass/style.scss */
 #photos .controls .prev {
   left: 0px;
   text-align: left;
 }
-/* line 356, ../sass/style.scss */
+/* line 357, ../sass/style.scss */
 #photos .controls .prev p {
   margin-left: 12px;
 }
-/* line 361, ../sass/style.scss */
+/* line 362, ../sass/style.scss */
 #photos .controls .next {
   right: 0px;
   text-align: right;
 }
-/* line 365, ../sass/style.scss */
+/* line 366, ../sass/style.scss */
 #photos .controls .next p {
   margin-right: 12px;
 }
-/* line 371, ../sass/style.scss */
+/* line 372, ../sass/style.scss */
 #photos .navlinks {
   z-index: 1;
   position: absolute;
@@ -387,7 +388,7 @@ body {
   float: right;
   left: 652.58px;
 }
-/* line 382, ../sass/style.scss */
+/* line 383, ../sass/style.scss */
 #photos .navlinks header {
   margin: 8px;
   line-height: 16px;
@@ -395,17 +396,17 @@ body {
   text-transform: uppercase;
   border-bottom: solid 1px #000;
 }
-/* line 390, ../sass/style.scss */
+/* line 391, ../sass/style.scss */
 #photos .navlinks ul {
   list-style: none;
   margin: 8px;
   padding: 0px;
 }
-/* line 395, ../sass/style.scss */
+/* line 396, ../sass/style.scss */
 #photos .navlinks ul li.opened {
   color: #666;
 }
-/* line 400, ../sass/style.scss */
+/* line 401, ../sass/style.scss */
 #photos .navlinks figure {
   height: 65.167px;
   width: 65.167px;
@@ -419,12 +420,12 @@ body {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 408, ../sass/style.scss */
+/* line 409, ../sass/style.scss */
 #photos .navlinks figure img {
   height: 100%;
   width: 100%;
 }
-/* line 413, ../sass/style.scss */
+/* line 414, ../sass/style.scss */
 #photos .navlinks figure.opened {
   -moz-box-shadow: 0px 0px 5px black;
   -webkit-box-shadow: 0px 0px 5px black;
