--- a/hero/sass/_variables.sass
+++ b/hero/sass/_variables.sass
@@ -8,30 +8,30 @@ $feature-content-height: $hero-width/3
 $features-list-outer-height: $hero-height - $feature-content-height
 $features-list-outer-width: $hero-width + 2
 $features-list-padding: 2px
-$features-item-width: $features-list-outer-width/4
 $features-list-margin: 0px
+$features-item-width: $features-list-outer-width/4
 $features-item-line-height: 18px
 
-$stories-thumb-margin: 4px
-$stories-thumb-dim: $feature-content-height/3 - $stories-thumb-margin*3
+$thumblinks-margin: 4px
+$thumblinks-dim: $feature-content-height/3 - $thumblinks-margin*3
 
 $story-width: $hero-width*(2/3)
 $story-padding: 24px
 
 $photos-thumb-margin: 4px
-$photos-thumb-dim: $feature-content-height/4 - $photos-thumb-margin*4
+$photos-thumb-dim: $feature-content-height/4 - $thumblinks-margin*4
 $photos-feature-content: $hero-width*.67
 
 $nav-dim: 60px
 $nav-arrow-margin: 12px
 
+//colors
 $highlight-red: #F25757
-$light-red:#ED3232
-$dark-red:#A61C1F
+$light-red: #ED3232
+$dark-red: #A61C1F
 $button-red: #D42222
-$cream:#FAF7ED
+$cream: #FAF7ED
 $light-cream: #FFFDF7
-
 
 $sans: "Helvetica", "Arial", sans-serif
 $serif: "Georgia", "Times New Roman", serif
