--- a/hero/sass/style.scss
+++ b/hero/sass/style.scss
@@ -1,6 +1,3 @@
-/*
-* Variables and imports
-*/
 @import "compass";
 @import "variables";
 
@@ -19,15 +16,11 @@ body {
 	margin-right: auto;
 	position: relative;
 	top: 150px;
-	display: block;
 	overflow: hidden;
-	padding: 0px;
 }
 
 #strip{
 	position: absolute;
-	top: 0px;
-	left: 0px;
 	width: $hero-width*4;
 }
 
@@ -88,117 +81,114 @@ body {
 	width: $hero-width;
 	float: left;
 	top: 0px;
-	
-	.feature-content{
-		padding: $feature-content-padding;
-		height: $feature-content-height;
-		top: 0px;
-	}
+}
+.feature-content{
+	padding: $feature-content-padding;
+	height: $feature-content-height;
+	top: 0px;
 }
 
 /*
 * For the Stories feature.
 */
-#stories{
-	.navlinks{
+.thumbnail-links{
+	@include clearfix;
+	height: $feature-content-height;
+	width: $feature-content-height;
+	padding: 8px;
+	float: right;
+	ul{
+		list-style: none;
+		margin: 0px;
+		width: $feature-content-height;
+		height: $feature-content-height;
+		padding-left: 0px;
+	}
+	li{
+		height: $thumblinks-dim;
+		width: $thumblinks-dim;
+		background-color: #000;
+		margin: $thumblinks-margin;
+		padding: 0px;
 		@include clearfix;
 		float: right;
-		height: $feature-content-height;
-		width: $feature-content-height;
-		padding: 8px;
-		ul{
-			list-style: none;
+		@include box-shadow(0px 0px 6px #ddd);
+		figure{
+			height: $thumblinks-dim;
+			width: $thumblinks-dim;
 			margin: 0px;
-			width: $feature-content-height;
-			height: $feature-content-height;
-			padding-left: 0px;
-		}
-		li{
-			height: $stories-thumb-dim;
-			width: $stories-thumb-dim;
-			background-color: #000;
-			margin: $stories-thumb-margin;
-			padding: 0px;
-			@include clearfix;
-			float: right;
-			@include box-shadow(0px 0px 6px #ddd);
-			figure{
-				height: $stories-thumb-dim;
-				width: $stories-thumb-dim;
-				margin: 0px;
-				img{
-					width: 100%;
-				}
-			}
-		}
-
-		li.opened{
-			@include box-shadow(0px 0px 6px #333);
-		}
-	}
-	.story{
-		width: $feature-content-height*2;
-		position: absolute;
-		top: 0px;
-		display: none;
-		.story-image{
-			width: $feature-content-height;
-			height: $feature-content-height + $hero-padding*2;
-			overflow: hidden;
-			@include clearfix;
-			float: left;
-			background-color: #000;
 			img{
 				width: 100%;
 			}
 		}
-		section.story-blurb{
-			width: $feature-content-height - $story-padding*2;
-			height: $feature-content-height;
-			padding: $story-padding;
-			position: relative;
-			left: 4px;
-			@include clearfix;
-			float: right;
-			header.story-blurb{
-				font-family: $serif;
-				font-size: 26px;
-			}
-			.blurb{
-				margin-top: 24px;
-				p{
-					font-family: $sans;
-					font-size: 14px;
-					line-height: 18px;
-				}
-			}
-			.story-read-more{
-				background-color: $button-red;
-				border: none;
-				font-family: $sans;
-				text-transform: uppercase;
-				color: #FFFDF5;
-				padding: 6px;
-				float: right;
-				font-size: 11px;
-				@include border-radius(3px);
-				@include box-shadow(0px 0px 6px #ccc);
-				@include text-shadow(rgba(black, 0.5) 0 0 2px);
-			}
-			
-			.story-read-more:hover{
-				background-color: $light-red;
-			}
-			
-			.story-read-more:active{
-				background-color: $dark-red;
-			}
-		}
 	}
-	.story.opened{
-		display: block;
+	li.opened, li:hover{
+		@include box-shadow(0px 0px 6px #333);
 	}
 }
+.story{
+	width: $feature-content-height*2;
+	position: absolute;
+	top: 0px;
+	display: none;
+	.story-image{
+		width: $feature-content-height;
+		height: $feature-content-height + $hero-padding*2;
+		overflow: hidden;
+		@include clearfix;
+		float: left;
+		background-color: #000;
+		img{
+			width: 100%;
+		}
+	}
+}
+section.story-blurb{
+	width: $feature-content-height - $story-padding*2;
+	height: $feature-content-height;
+	padding: $story-padding;
+	position: relative;
+	left: 4px;
+	@include clearfix;
+	float: right;
+	header.story-blurb{
+		font-family: $serif;
+		font-size: 26px;
+	}
+	.blurb{
+		margin-top: 24px;
+		p{
+			font-family: $sans;
+			font-size: 14px;
+			line-height: 18px;
+		}
+	}
+	.story-read-more{
+		background-color: $button-red;
+		border: none;
+		font-family: $sans;
+		text-transform: uppercase;
+		color: #FFFDF5;
+		padding: 6px;
+		float: right;
+		font-size: 11px;
+		@include border-radius(3px);
+		@include box-shadow(0px 0px 6px #ccc);
+		@include text-shadow(rgba(black, 0.5) 0 0 2px);
+	}
+	
+	.story-read-more:hover{
+		background-color: $light-red;
+	}
+	
+	.story-read-more:active{
+		background-color: $dark-red;
+	}
+}
+.story.opened{
+	display: block;
+}
+
 
 /*
 * For the Photos feature.
