--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -260,33 +260,34 @@ body {
   height: 370px;
   z-index: 41;
   float: left;
+  background-color: black;
 }
-/* line 261, ../sass/style.scss */
+/* line 262, ../sass/style.scss */
 #photos article.photoset {
   display: none;
   height: 370px;
   width: 974px;
 }
-/* line 267, ../sass/style.scss */
+/* line 268, ../sass/style.scss */
 #photos article.photoset.opened {
   display: block;
 }
-/* line 271, ../sass/style.scss */
+/* line 272, ../sass/style.scss */
 #photos .photo {
   float: left;
 }
-/* line 273, ../sass/style.scss */
+/* line 274, ../sass/style.scss */
 #photos .photo figure {
   width: 652.58px;
   height: 370px;
   margin: 0px;
 }
-/* line 277, ../sass/style.scss */
+/* line 278, ../sass/style.scss */
 #photos .photo figure img {
   width: 100%;
   float: left;
 }
-/* line 282, ../sass/style.scss */
+/* line 283, ../sass/style.scss */
 #photos .photo figcaption {
   width: 305.42px;
   margin: 0px;
@@ -304,7 +305,7 @@ body {
   -o-box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
   box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
 }
-/* line 295, ../sass/style.scss */
+/* line 296, ../sass/style.scss */
 #photos .photo figcaption .notch {
   position: absolute;
   color: #fffdf7;
@@ -314,31 +315,31 @@ body {
   margin: 0px;
   padding: 0px;
 }
-/* line 305, ../sass/style.scss */
+/* line 306, ../sass/style.scss */
 #photos .photo figcaption p {
   margin: 0px;
 }
-/* line 309, ../sass/style.scss */
+/* line 310, ../sass/style.scss */
 #photos .photo figcaption .credit {
   font-size: 11px;
 }
-/* line 318, ../sass/style.scss */
+/* line 319, ../sass/style.scss */
 #photos .photo.opened {
   display: block;
 }
-/* line 322, ../sass/style.scss */
+/* line 323, ../sass/style.scss */
 #photos .content {
   z-index: 0;
   float: left;
 }
-/* line 327, ../sass/style.scss */
+/* line 328, ../sass/style.scss */
 #photos .controls {
   width: 652.58px;
   position: absolute;
   top: 0px;
   z-index: 42;
 }
-/* line 333, ../sass/style.scss */
+/* line 334, ../sass/style.scss */
 #photos .controls .prev, #photos .controls .next {
   height: 60px;
   width: 60px;
@@ -351,32 +352,32 @@ body {
   margin: 4px;
   border: solid 4px rgba(0, 0, 0, 0.6);
 }
-/* line 345, ../sass/style.scss */
+/* line 346, ../sass/style.scss */
 #photos .controls .prev p, #photos .controls .next p {
   position: relative;
   margin: 0px;
   margin-top: -8px;
   opacity: .6;
 }
-/* line 353, ../sass/style.scss */
+/* line 354, ../sass/style.scss */
 #photos .controls .prev {
   left: 0px;
   text-align: left;
 }
-/* line 357, ../sass/style.scss */
+/* line 358, ../sass/style.scss */
 #photos .controls .prev p {
   margin-left: 12px;
 }
-/* line 362, ../sass/style.scss */
+/* line 363, ../sass/style.scss */
 #photos .controls .next {
   right: 0px;
   text-align: right;
 }
-/* line 366, ../sass/style.scss */
+/* line 367, ../sass/style.scss */
 #photos .controls .next p {
   margin-right: 12px;
 }
-/* line 372, ../sass/style.scss */
+/* line 373, ../sass/style.scss */
 #photos .navlinks {
   z-index: 1;
   position: absolute;
@@ -388,7 +389,7 @@ body {
   float: right;
   left: 652.58px;
 }
-/* line 383, ../sass/style.scss */
+/* line 384, ../sass/style.scss */
 #photos .navlinks header {
   margin: 8px;
   line-height: 16px;
@@ -396,17 +397,17 @@ body {
   text-transform: uppercase;
   border-bottom: solid 1px #000;
 }
-/* line 391, ../sass/style.scss */
+/* line 392, ../sass/style.scss */
 #photos .navlinks ul {
   list-style: none;
   margin: 8px;
   padding: 0px;
 }
-/* line 396, ../sass/style.scss */
+/* line 397, ../sass/style.scss */
 #photos .navlinks ul li.opened {
   color: #666;
 }
-/* line 401, ../sass/style.scss */
+/* line 402, ../sass/style.scss */
 #photos .navlinks figure {
   height: 65.167px;
   width: 65.167px;
@@ -420,12 +421,12 @@ body {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 409, ../sass/style.scss */
+/* line 410, ../sass/style.scss */
 #photos .navlinks figure img {
   height: 100%;
   width: 100%;
 }
-/* line 414, ../sass/style.scss */
+/* line 415, ../sass/style.scss */
 #photos .navlinks figure.opened {
   -moz-box-shadow: 0px 0px 5px black;
   -webkit-box-shadow: 0px 0px 5px black;
