--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -1,16 +1,11 @@
 /*
 * Large-element styles
 */
-/* line 7, ../sass/style.scss */
-body {
-  background-color: #ccc;
-}
-
-/* line 11, ../sass/style.scss */
+/* line 8, ../sass/style.scss */
 #hero {
   width: 974px;
   height: 370px;
-  background-color: #faf7ed;
+  background-color: #e6e3d7;
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -18,7 +13,7 @@ body {
   overflow: hidden;
 }
 
-/* line 22, ../sass/style.scss */
+/* line 19, ../sass/style.scss */
 #strip {
   position: absolute;
   width: 3896px;
@@ -27,7 +22,7 @@ body {
 /*
 * Main nav styles
 */
-/* line 30, ../sass/style.scss */
+/* line 27, ../sass/style.scss */
 #features {
   height: 41.333px;
   width: 976px;
@@ -38,15 +33,15 @@ body {
   -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 0 8px;
   box-shadow: rgba(0, 0, 0, 0.3) 0 0 8px;
   text-shadow: rgba(0, 0, 0, 0.4) 0 0 2px;
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #f25757), color-stop(20%, #ed3232), color-stop(90%, #a61c1f));
-  background-image: -webkit-linear-gradient(#f25757, #ed3232 20%, #a61c1f 90%);
-  background-image: -moz-linear-gradient(#f25757, #ed3232 20%, #a61c1f 90%);
-  background-image: -o-linear-gradient(#f25757, #ed3232 20%, #a61c1f 90%);
-  background-image: -ms-linear-gradient(#f25757, #ed3232 20%, #a61c1f 90%);
-  background-image: linear-gradient(#f25757, #ed3232 20%, #a61c1f 90%);
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #da0000), color-stop(20%, #c60017), color-stop(90%, #83000c));
+  background-image: -webkit-linear-gradient(#da0000, #c60017 20%, #83000c 90%);
+  background-image: -moz-linear-gradient(#da0000, #c60017 20%, #83000c 90%);
+  background-image: -o-linear-gradient(#da0000, #c60017 20%, #83000c 90%);
+  background-image: -ms-linear-gradient(#da0000, #c60017 20%, #83000c 90%);
+  background-image: linear-gradient(#da0000, #c60017 20%, #83000c 90%);
   text-transform: uppercase;
 }
-/* line 41, ../sass/style.scss */
+/* line 38, ../sass/style.scss */
 #features ul {
   margin-left: 0px;
   margin: 0px;
@@ -54,7 +49,7 @@ body {
   height: 100%;
   width: 100%;
 }
-/* line 48, ../sass/style.scss */
+/* line 45, ../sass/style.scss */
 #features li {
   width: 244px;
   display: block;
@@ -63,19 +58,19 @@ body {
   height: 100%;
   margin: 0px;
   padding: 0px;
-  color: #faf7ed;
+  color: #e6e3d7;
   font-family: "Helvetica", "Arial", sans-serif;
 }
-/* line 60, ../sass/style.scss */
+/* line 57, ../sass/style.scss */
 #features li.opened {
-  text-shadow: rgba(250, 247, 237, 0.4) 0 0 4px;
+  text-shadow: rgba(230, 227, 215, 0.4) 0 0 4px;
+  color: #fffdf7;
 }
-/* line 64, ../sass/style.scss */
+/* line 62, ../sass/style.scss */
 #features li:hover {
-  color: #FFFDF5;
-  text-shadow: rgba(250, 247, 237, 0.8) 0 0 4px;
+  text-shadow: rgba(230, 227, 215, 0.8) 0 0 4px;
 }
-/* line 69, ../sass/style.scss */
+/* line 66, ../sass/style.scss */
 #features .feature-nav {
   position: relative;
   height: 18px;
@@ -85,7 +80,7 @@ body {
 /*
 * Inside of the feature itself. General styles.
 */
-/* line 79, ../sass/style.scss */
+/* line 76, ../sass/style.scss */
 .feature {
   padding: 0px;
   width: 974px;
@@ -93,7 +88,7 @@ body {
   top: 0px;
 }
 
-/* line 85, ../sass/style.scss */
+/* line 82, ../sass/style.scss */
 .feature-content {
   padding: 0px;
   height: 324.667px;
@@ -103,7 +98,7 @@ body {
 /*
 * For the Stories feature.
 */
-/* line 94, ../sass/style.scss */
+/* line 91, ../sass/style.scss */
 .thumbnail-links {
   overflow: hidden;
   *zoom: 1;
@@ -112,7 +107,7 @@ body {
   padding: 8px;
   float: right;
 }
-/* line 100, ../sass/style.scss */
+/* line 97, ../sass/style.scss */
 .thumbnail-links ul {
   list-style: none;
   margin: 0px;
@@ -120,7 +115,7 @@ body {
   height: 324.667px;
   padding-left: 0px;
 }
-/* line 107, ../sass/style.scss */
+/* line 104, ../sass/style.scss */
 .thumbnail-links li {
   height: 96.222px;
   width: 96.222px;
@@ -134,31 +129,31 @@ body {
   -moz-box-shadow: 0px 0px 6px #dddddd;
   box-shadow: 0px 0px 6px #dddddd;
 }
-/* line 116, ../sass/style.scss */
+/* line 113, ../sass/style.scss */
 .thumbnail-links li figure {
   height: 96.222px;
   width: 96.222px;
   margin: 0px;
 }
-/* line 120, ../sass/style.scss */
+/* line 117, ../sass/style.scss */
 .thumbnail-links li figure img {
   width: 100%;
 }
-/* line 125, ../sass/style.scss */
+/* line 122, ../sass/style.scss */
 .thumbnail-links li.opened, .thumbnail-links li:hover {
   -webkit-box-shadow: 0px 0px 6px #333333;
   -moz-box-shadow: 0px 0px 6px #333333;
   box-shadow: 0px 0px 6px #333333;
 }
 
-/* line 129, ../sass/style.scss */
+/* line 126, ../sass/style.scss */
 .story {
   width: 649.333px;
   position: absolute;
   top: 0px;
   display: none;
 }
-/* line 134, ../sass/style.scss */
+/* line 131, ../sass/style.scss */
 .story .story-image {
   width: 324.667px;
   height: 332.667px;
@@ -168,12 +163,12 @@ body {
   float: left;
   background-color: #000;
 }
-/* line 141, ../sass/style.scss */
+/* line 138, ../sass/style.scss */
 .story .story-image img {
   width: 100%;
 }
 
-/* line 146, ../sass/style.scss */
+/* line 143, ../sass/style.scss */
 section.story-blurb {
   width: 276.667px;
   height: 324.667px;
@@ -184,30 +179,43 @@ section.story-blurb {
   *zoom: 1;
   float: right;
 }
-/* line 154, ../sass/style.scss */
+/* line 151, ../sass/style.scss */
 section.story-blurb header.story-blurb {
   font-family: "Georgia", "Times New Roman", serif;
   font-size: 26px;
 }
-/* line 158, ../sass/style.scss */
+/* line 155, ../sass/style.scss */
 section.story-blurb .blurb {
   margin-top: 24px;
 }
-/* line 160, ../sass/style.scss */
+/* line 157, ../sass/style.scss */
 section.story-blurb .blurb p {
   font-family: "Helvetica", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
 }
-/* line 166, ../sass/style.scss */
+/* line 163, ../sass/style.scss */
 section.story-blurb .story-read-more {
-  background-color: #d42222;
+  float: right;
+}
+
+/* line 167, ../sass/style.scss */
+.story.opened {
+  display: block;
+}
+
+/*
+* hero button, e.g. story-read-more
+*/
+/* line 176, ../sass/style.scss */
+.hero-button {
+  background-color: #c60017;
   border: none;
   font-family: "Helvetica", "Arial", sans-serif;
+  font-weight: bold;
   text-transform: uppercase;
-  color: #FFFDF5;
+  color: #fffdf7;
   padding: 6px;
-  float: right;
   font-size: 11px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -219,24 +227,21 @@ section.story-blurb .story-read-more {
   box-shadow: 0px 0px 6px #cccccc;
   text-shadow: rgba(0, 0, 0, 0.5) 0 0 2px;
 }
-/* line 180, ../sass/style.scss */
-section.story-blurb .story-read-more:hover {
-  background-color: #ed3232;
-}
-/* line 184, ../sass/style.scss */
-section.story-blurb .story-read-more:active {
-  background-color: #a61c1f;
+
+/* line 190, ../sass/style.scss */
+.hero-button:hover {
+  background-color: #da0000;
 }
 
-/* line 188, ../sass/style.scss */
-.story.opened {
-  display: block;
+/* line 194, ../sass/style.scss */
+.hero-button:active {
+  background-color: #ac1831;
 }
 
 /*
 * For the Photos feature.
 */
-/* line 197, ../sass/style.scss */
+/* line 203, ../sass/style.scss */
 #photos .feature-content {
   margin: 0px;
   padding: 0px;
@@ -246,30 +251,30 @@ section.story-blurb .story-read-more:active {
   float: left;
   width: 974px;
 }
-/* line 206, ../sass/style.scss */
+/* line 212, ../sass/style.scss */
 #photos article.photoset {
   display: none;
 }
-/* line 210, ../sass/style.scss */
+/* line 216, ../sass/style.scss */
 #photos article.photoset.opened {
   display: block;
 }
-/* line 214, ../sass/style.scss */
+/* line 220, ../sass/style.scss */
 #photos .photo {
   float: left;
 }
-/* line 217, ../sass/style.scss */
+/* line 223, ../sass/style.scss */
 #photos .photo figure {
   width: 652.58px;
   height: 370px;
   margin: 0px;
 }
-/* line 221, ../sass/style.scss */
+/* line 227, ../sass/style.scss */
 #photos .photo figure img {
   width: 100%;
   float: left;
 }
-/* line 226, ../sass/style.scss */
+/* line 232, ../sass/style.scss */
 #photos .photo figcaption {
   width: 305.42px;
   margin: 0px;
@@ -281,45 +286,45 @@ section.story-blurb .story-read-more:active {
   overflow: hidden;
   *zoom: 1;
   padding: 8px;
-  background-color: #fffdf7;
+  background-color: #faf7ed;
   -webkit-box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
   -moz-box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
   box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
 }
-/* line 239, ../sass/style.scss */
+/* line 245, ../sass/style.scss */
 #photos .photo figcaption .notch {
   position: absolute;
-  color: #fffdf7;
+  color: #faf7ed;
   font-size: 30px;
   left: 632.58px;
   top: 15px;
   margin: 0px;
   padding: 0px;
 }
-/* line 249, ../sass/style.scss */
+/* line 255, ../sass/style.scss */
 #photos .photo figcaption p {
   margin: 0px;
 }
-/* line 253, ../sass/style.scss */
+/* line 259, ../sass/style.scss */
 #photos .photo figcaption .credit {
   font-size: 11px;
 }
-/* line 262, ../sass/style.scss */
+/* line 268, ../sass/style.scss */
 #photos .photo.opened {
   display: block;
 }
-/* line 266, ../sass/style.scss */
+/* line 272, ../sass/style.scss */
 #photos .content {
   z-index: 0;
   float: left;
 }
-/* line 271, ../sass/style.scss */
+/* line 277, ../sass/style.scss */
 #photos .controls {
   width: 652.58px;
   position: absolute;
   top: 0px;
 }
-/* line 276, ../sass/style.scss */
+/* line 282, ../sass/style.scss */
 #photos .controls .prev, #photos .controls .next {
   height: 60px;
   width: 60px;
@@ -332,32 +337,32 @@ section.story-blurb .story-read-more:active {
   margin: 4px;
   border: solid 4px rgba(0, 0, 0, 0.6);
 }
-/* line 288, ../sass/style.scss */
+/* line 294, ../sass/style.scss */
 #photos .controls .prev p, #photos .controls .next p {
   position: relative;
   margin: 0px;
   margin-top: -8px;
   opacity: .6;
 }
-/* line 296, ../sass/style.scss */
+/* line 302, ../sass/style.scss */
 #photos .controls .prev {
   left: 0px;
   text-align: left;
 }
-/* line 300, ../sass/style.scss */
+/* line 306, ../sass/style.scss */
 #photos .controls .prev p {
   margin-left: 12px;
 }
-/* line 305, ../sass/style.scss */
+/* line 311, ../sass/style.scss */
 #photos .controls .next {
   right: 0px;
   text-align: right;
 }
-/* line 309, ../sass/style.scss */
+/* line 315, ../sass/style.scss */
 #photos .controls .next p {
   margin-right: 12px;
 }
-/* line 315, ../sass/style.scss */
+/* line 321, ../sass/style.scss */
 #photos .navlinks {
   z-index: 1;
   position: absolute;
@@ -369,7 +374,7 @@ section.story-blurb .story-read-more:active {
   float: right;
   left: 652.58px;
 }
-/* line 326, ../sass/style.scss */
+/* line 332, ../sass/style.scss */
 #photos .navlinks header {
   margin: 8px;
   line-height: 16px;
@@ -377,17 +382,17 @@ section.story-blurb .story-read-more:active {
   text-transform: uppercase;
   border-bottom: solid 1px #000;
 }
-/* line 334, ../sass/style.scss */
+/* line 340, ../sass/style.scss */
 #photos .navlinks ul {
   list-style: none;
   margin: 8px;
   padding: 0px;
 }
-/* line 339, ../sass/style.scss */
+/* line 345, ../sass/style.scss */
 #photos .navlinks ul li.opened {
   color: #666;
 }
-/* line 344, ../sass/style.scss */
+/* line 350, ../sass/style.scss */
 #photos .navlinks figure {
   height: 65.167px;
   width: 65.167px;
@@ -400,12 +405,12 @@ section.story-blurb .story-read-more:active {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 352, ../sass/style.scss */
+/* line 358, ../sass/style.scss */
 #photos .navlinks figure img {
   height: 100%;
   width: 100%;
 }
-/* line 357, ../sass/style.scss */
+/* line 363, ../sass/style.scss */
 #photos .navlinks figure.opened {
   -webkit-box-shadow: 0px 0px 5px black;
   -moz-box-shadow: 0px 0px 5px black;
