--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -258,32 +258,72 @@ body {
 #photos .thumbs {
   display: none;
 }
-/* line 258, ../sass/style.scss */
+/* line 256, ../sass/style.scss */
+#photos .thumbs ul {
+  list-style: none;
+  width: 652.58px;
+  height: 324.667px;
+  padding-left: 0px;
+  margin: 4px;
+}
+/* line 262, ../sass/style.scss */
+#photos .thumbs ul li {
+  height: 96.222px;
+  width: 96.222px;
+  background-color: #000;
+  margin: 4px;
+  padding: 0px;
+  overflow: hidden;
+  *zoom: 1;
+  float: left;
+  -moz-box-shadow: 0px 0px 6px #dddddd;
+  -webkit-box-shadow: 0px 0px 6px #dddddd;
+  -o-box-shadow: 0px 0px 6px #dddddd;
+  box-shadow: 0px 0px 6px #dddddd;
+}
+/* line 271, ../sass/style.scss */
+#photos .thumbs ul li figure {
+  height: 96.222px;
+  width: 96.222px;
+  margin: 0px;
+}
+/* line 276, ../sass/style.scss */
+#photos .thumbs ul li figure img {
+  width: 100%;
+}
+/* line 282, ../sass/style.scss */
+#photos .thumbs ul li.opened {
+  -moz-box-shadow: 0px 0px 6px #333333;
+  -webkit-box-shadow: 0px 0px 6px #333333;
+  -o-box-shadow: 0px 0px 6px #333333;
+  box-shadow: 0px 0px 6px #333333;
+}
+/* line 288, ../sass/style.scss */
 #photos article.photoset {
   display: none;
   height: 370px;
   width: 974px;
 }
-/* line 264, ../sass/style.scss */
+/* line 294, ../sass/style.scss */
 #photos article.photoset.opened {
   display: block;
 }
-/* line 268, ../sass/style.scss */
+/* line 298, ../sass/style.scss */
 #photos .photo {
   float: left;
 }
-/* line 270, ../sass/style.scss */
+/* line 300, ../sass/style.scss */
 #photos .photo figure {
   width: 652.58px;
   height: 370px;
   margin: 0px;
 }
-/* line 274, ../sass/style.scss */
+/* line 304, ../sass/style.scss */
 #photos .photo figure img {
   width: 100%;
   float: left;
 }
-/* line 279, ../sass/style.scss */
+/* line 309, ../sass/style.scss */
 #photos .photo figcaption {
   width: 305.42px;
   margin: 0px;
@@ -301,7 +341,7 @@ body {
   -o-box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
   box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
 }
-/* line 292, ../sass/style.scss */
+/* line 322, ../sass/style.scss */
 #photos .photo figcaption .notch {
   position: absolute;
   color: #fffdf7;
@@ -311,31 +351,31 @@ body {
   margin: 0px;
   padding: 0px;
 }
-/* line 302, ../sass/style.scss */
+/* line 332, ../sass/style.scss */
 #photos .photo figcaption p {
   margin: 0px;
 }
-/* line 306, ../sass/style.scss */
+/* line 336, ../sass/style.scss */
 #photos .photo figcaption .credit {
   font-size: 11px;
 }
-/* line 315, ../sass/style.scss */
+/* line 345, ../sass/style.scss */
 #photos .photo.opened {
   display: block;
 }
-/* line 319, ../sass/style.scss */
+/* line 349, ../sass/style.scss */
 #photos .content {
   z-index: 0;
   float: left;
 }
-/* line 324, ../sass/style.scss */
+/* line 354, ../sass/style.scss */
 #photos .controls {
   width: 652.58px;
   position: absolute;
   top: 0px;
   z-index: 42;
 }
-/* line 330, ../sass/style.scss */
+/* line 360, ../sass/style.scss */
 #photos .controls .prev, #photos .controls .next {
   height: 60px;
   width: 60px;
@@ -348,32 +388,32 @@ body {
   margin: 4px;
   border: solid 4px rgba(0, 0, 0, 0.6);
 }
-/* line 342, ../sass/style.scss */
+/* line 372, ../sass/style.scss */
 #photos .controls .prev p, #photos .controls .next p {
   position: relative;
   margin: 0px;
   margin-top: -8px;
   opacity: .6;
 }
-/* line 350, ../sass/style.scss */
+/* line 380, ../sass/style.scss */
 #photos .controls .prev {
   left: 0px;
   text-align: left;
 }
-/* line 354, ../sass/style.scss */
+/* line 384, ../sass/style.scss */
 #photos .controls .prev p {
   margin-left: 12px;
 }
-/* line 359, ../sass/style.scss */
+/* line 389, ../sass/style.scss */
 #photos .controls .next {
   right: 0px;
   text-align: right;
 }
-/* line 363, ../sass/style.scss */
+/* line 393, ../sass/style.scss */
 #photos .controls .next p {
   margin-right: 12px;
 }
-/* line 369, ../sass/style.scss */
+/* line 399, ../sass/style.scss */
 #photos .navlinks {
   z-index: 1;
   position: absolute;
@@ -385,7 +425,7 @@ body {
   float: right;
   left: 652.58px;
 }
-/* line 380, ../sass/style.scss */
+/* line 410, ../sass/style.scss */
 #photos .navlinks header {
   margin: 8px;
   line-height: 16px;
@@ -393,17 +433,17 @@ body {
   text-transform: uppercase;
   border-bottom: solid 1px #000;
 }
-/* line 388, ../sass/style.scss */
+/* line 418, ../sass/style.scss */
 #photos .navlinks ul {
   list-style: none;
   margin: 8px;
   padding: 0px;
 }
-/* line 393, ../sass/style.scss */
+/* line 423, ../sass/style.scss */
 #photos .navlinks ul li.opened {
   color: #666;
 }
-/* line 398, ../sass/style.scss */
+/* line 428, ../sass/style.scss */
 #photos .navlinks figure {
   height: 65.167px;
   width: 65.167px;
@@ -417,12 +457,12 @@ body {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 406, ../sass/style.scss */
+/* line 436, ../sass/style.scss */
 #photos .navlinks figure img {
   height: 100%;
   width: 100%;
 }
-/* line 411, ../sass/style.scss */
+/* line 441, ../sass/style.scss */
 #photos .navlinks figure.opened {
   -moz-box-shadow: 0px 0px 5px black;
   -webkit-box-shadow: 0px 0px 5px black;
